apps/home-automation/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    external-dns.alpha.kubernetes.io/hostname: zigbee2mqtt.millward-yuan.net
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zigbee2MQTT"
    gethomepage.dev/description: "Zigbee2MQTT web UI"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "sh-zigbee2mqtt"
spec:
  rules:
    - host: zigbee2mqtt.millward-yuan.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
